# rust-kv-server

./: .gitignore  Cargo.toml  abi.proto  build.rs
examples/: client.rs  dummy_server.rs  server.rs
src/: main.rs
src/pb/: mod.rs
src/service/: command_service.rs  mod.rs
src/storage/: memory.rs  mod.rs
